Updated the get role and search role APIs to now return the associated child roles and functions with the roles, as opposeed to merely returning their IDs.
